--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([A-z-&=0-9]*)/?([A-z&=0-9]*)$ index.php?page=$1&subpage=$2
+RewriteRule ^([A-z-&=0-9]*)/?([A-z&=0-9]*)/?([A-z&=0-9]*)$ index.php?page=$1&subpage=$2&subpage2=$3
